--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -25,13 +25,11 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
-
 def keystoreProperties = new Properties()
 def keystorePropertiesFile = rootProject.file('key.properties')
 if (keystorePropertiesFile.exists()) {
     keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
 }
-
 
 android {
     compileSdkVersion 33
@@ -72,7 +70,9 @@ android {
     }
     buildTypes {
         release {
-            signingConfig signingConfigs.debug
+            shrinkResources false
+            minifyEnabled false
+            signingConfig signingConfigs.release
         }
     }
 }
