--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+2
+version: 1.0.0+7
 
 environment:
   sdk: ">=2.17.6 <3.0.0"
@@ -39,16 +39,20 @@ dependencies:
   provider: 6.0.3
   flutter_rating_bar: 4.0.1
   flutter_share: ^2.0.0
-  cloud_firestore: ^3.1.8
-  firebase_core: ^1.12.0
-  firebase_storage: ^10.2.4
-  firebase_auth: ^3.3.7
+#  cloud_firestore: ^3.1.8
+#  firebase_core: ^1.12.0
+  cloud_firestore: ^4.1.0
+  firebase_core: ^2.3.0
+#  firebase_storage: ^10.2.4
+  firebase_storage: ^11.0.6
+#  firebase_auth: ^3.3.7
+  firebase_auth: ^4.1.5
   loading_overlay: ^0.3.0
   cached_network_image: ^3.2.0
   jiffy: ^5.0.0
   flutter_spinkit: ^5.1.0
-  firebase_crashlytics: ^2.8.11
-  firebase_analytics: ^9.3.6
+#  firebase_crashlytics: ^2.8.11
+#  firebase_analytics: ^9.3.6
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   path_provider: ^2.0.11
@@ -58,14 +62,17 @@ dependencies:
   smooth_page_indicator: ^1.0.0+2
   syncfusion_flutter_datepicker: ^20.3.49
   flutter_stripe: ^4.0.0
-  awesome_notifications: ^0.6.21
-  firebase_messaging: ^11.4.1
+#  awesome_notifications: ^0.6.21
+#  firebase_messaging: ^11.4.1
+  firebase_messaging: ^14.1.3
+  awesome_notifications: ^0.7.4+1
   webview_flutter: ^3.0.4
   percent_indicator: ^4.2.2
   zego_uikit_prebuilt_call: ^1.2.8
-  zego_uikit_signaling_plugin: ^1.0.7
+#  zego_uikit_signaling_plugin: ^1.0.7
   flutter_styled_toast: ^2.1.3
   stop_watch_timer: ^2.0.0
+  flutter_launcher_icons: ^0.11.0
 #  flutter_launcher_icons: ^0.11.0
 
 
