--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,7 +61,8 @@ dependencies:
   carousel_slider: ^4.1.1
   smooth_page_indicator: ^1.0.0+2
   syncfusion_flutter_datepicker: ^20.3.49
-  flutter_stripe: ^4.0.0
+  flutter_stripe: ^7.0.0
+#  flutter_stripe: ^4.0.0
 #  awesome_notifications: ^0.6.21
 #  firebase_messaging: ^11.4.1
   firebase_messaging: ^14.1.3
